[package]
name = "mdbook_katex_css_download"
version = "0.1.0"
authors = ["Steven Hé (Sīchàng) <stevensichanghe@gmail.com>"]
edition = "2021"
description = "Executable to download static CSS and fonts for mdbook-katex"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SichangHe/mdbook_katex_css_download"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7"
reqwest = "0.11"
tokio = { version = "1.26", features = ["rt-multi-thread"] }

[profile.release]
lto = true

[features]
native-tls-vendored = ["reqwest/native-tls-vendored"]
