[package]
name = "mdbook_katex_css_download"
version = "0.2.1"
authors = ["Steven Hé (Sīchàng) <stevensichanghe@gmail.com>"]
edition = "2021"
description = "Executable to download static CSS and fonts for mdbook-katex"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SichangHe/mdbook_katex_css_download"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4"
regex = "1.9"
reqwest = "0.11"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true

[features]
native-tls-vendored = ["reqwest/native-tls-vendored"]
